fix incomplete media-dir-selection

--- a/app/templates/dest_contents.jinja2
+++ b/app/templates/dest_contents.jinja2
@@ -1,8 +1,9 @@
 
-{{"Source:"|style("EMPHASIS")}} {{ source }}
-{{"Destination:"|style("EMPHASIS")}} {{ destination }}
+{{"Source:"|style("EMPH")}} {{ source }}
+{{"Destination:"|style("EMPH")}} {{ destination }}
 
 Destination Contents:
+
 {% for entry in destination_content -%}
   {{ entry }}
 {% endfor %}
