--- a/app/templates/target_contents.jinja2
+++ b/app/templates/target_contents.jinja2
@@ -1,6 +1,7 @@
 
 {{"Source:"|style("EMPH")}} {{ source }}
 {{"Target:"|style("EMPH")}} {{ target }}
+{{"Backup Mode:"|style("EMPH")}} {{ backup_mode }}
 
 {{"Target Contents:"|style("HEADING")}}
 
