add target-content-selection when in update-mode

--- a/app/templates/select_backup_mode.jinja2
+++ b/app/templates/select_backup_mode.jinja2
@@ -1,5 +1,5 @@
 
-Select the Backup Mode:
+Select the backup-mode:
 
 {% for mode in modes -%}
 {{ loop.index|style("OPT_EMPH") }}{{ "."|style("OPT_EMPH") }} {{ mode|style("OPTION") }}
