--- a/app/templates/select_target_name.jinja2
+++ b/app/templates/select_target_name.jinja2
@@ -1,5 +1,5 @@
 
-Select the Name-Format for Your Backup:
+Select the name-format for your backup-directory:
 
 {% for format in name_formats -%}
 {{ loop.index|style("OPT_EMPH") }}{{ "."|style("OPT_EMPH") }} {{ format|style("OPTION") }}
