add seperate properties for existing and new backup-names

--- a/app/templates/target_contents.jinja2
+++ b/app/templates/target_contents.jinja2
@@ -1,13 +1,14 @@
 
+{{"Backup Mode:"|style("EMPH")}} {{ backup_mode }}
 {{"Source:"|style("EMPH")}} {{ source }}
 {{"Target:"|style("EMPH")}} {{ target }}
-{{"Backup Mode:"|style("EMPH")}} {{ backup_mode }}
-{{"Target Name:"|style("EMPH")}} {{ target_name }}
+{{ "Backup Name:"|style("EMPH") }} {{ backup_name }}
+{% if existing_backup %}{{"Existing Backup:"|style("EMPH")}} {{ existing_backup }}{% endif %}
 
 {% if target_content|length > 0 -%}
-{{"Target Contents:"|style("HEADING")}}
+{{ "Target Contents"|style("HEADING") }}
 
 {% for entry in target_content -%}
   {{ entry }}
-{% endfor %}
+{% endfor -%}
 {% endif -%}
